# Testing-CS4442

./: .firebaserc  .gitignore  README.md  main.py  package-lock.json  tests.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backend.yml  frontend.yml  testing.yml
Backend/: __init__.py  booking.py  database.py  firebase.py  gptparser.py  main.py  pyproject.toml  requirements.txt  reservation.py  sbdb.py  start.bat  start.sh  test.bat  test.sh
Backend/app/: booking.py  database.py  dependencies.py  firebase.py  main.py
Backend/app/routers/: auth.py  booking.py
Backend/routers/: add_reservation.py  auth.py  booking.py
Backend/tests/: add_reservation_test.py  conftest.py  gpt_nlp_test.py  test_auth.py  test_booking.py  test_booking_router.py  test_database.py  test_database_e2e.py  test_database_integration.py  test_dt.py  test_firebase.py  test_gpt_npl.py
Frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  script.js  vite.config.ts
Frontend/src/: app.html  types.ts
Frontend/src/lib/: Booking.svelte  Booking.ts  Chat.svelte  Firebase.ts  Login.svelte  Modal.svelte  Search.svelte  TokenMenu.svelte
Frontend/src/routes/: +page.server.ts  +page.svelte
Frontend/src/routes/book/: +page.server.ts  +page.svelte  gptBookingView.svelte  traditionalBookingView.svelte
Frontend/src/routes/chat/: +page.svelte
Frontend/src/routes/get_token/: +page.svelte
Frontend/tests/: accessibility.test.ts  booking-form.test.ts  booking.test.js  test.ts
test-emulator-default/auth_export/: accounts.json
test-emulator-default/firestore_export/: firestore_export.overall_export_metadata
test-emulator-default/firestore_export/all_namespaces/all_kinds/: all_namespaces_all_kinds.export_metadata  output-0
