[tool.poetry]
name = "css4442_testing"
version = "0.0.1"
description = "Smart Booking using GPT"
authors = ["galileo-dev <galileo-dev@users.noreply.github.com>"]
repository = "https://github.com/Galileo-dev/Testing-CS4442"
homepage = "https://github.com/Galileo-dev/Testing-CS4442"
readme = "README.md"
keywords = ["Bookme", "GPT", "AI"]


[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^1.7.3"
pre-commit = "^2.14.0"
termcolor = "^1.1.0"
pydantic = "^1.8.2"
typer = {version = "^0.7.0", extras = ["all"]}
simple-term-menu = "^1.5.2"
click = "^8.1.3"
prompt-toolkit = "^3.0.36"
openai = "^0.27.5"
fastapi = "^0.95.1"
uvicorn = {version = "^0.15.0", extras = ["standard"]}
firebase-admin = "^6.1.0"
starlette = "^0.26.1"
urllib3 = "==1.26.15"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-env = "^0.6.2"
Faker = "^8.14.0"
pytest-xdist = {version = "^2.5.0", extras = ["psutil"]}
requests = "^2.28.1"

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "dt: dumb test",
]
env = [
    "POETRY_VIRTUALENVS_IN_PROJECT=True"
]
testpaths = ["tests"]

[tool.poetry.scripts]
css4442_testing = "css4442_testing.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
