[tool.poetry]
name = "css4442_testing"
version = "0.0.1"
description = "Smart Booking using GPT"
authors = ["galileo-dev <galileo-dev@users.noreply.github.com>"]
repository = "https://github.com/Galileo-dev/Testing-CS4442"
homepage = "https://github.com/Galileo-dev/Testing-CS4442"
readme = "README.md"
keywords = ["Bookme", "GPT", "AI"]


[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.6"
fastapi = "^0.95.1"
uvicorn = {version = "^0.22.0", extras = ["standard"]}
firebase-admin = "^6.1.0"
starlette = "^0.26.1"
urllib3 = "==1.26.15"


[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-env = "^0.6.2"
requests = "^2.30.0"
httpx = "^0.24.0"

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
    "dt: dumb test",
]
env = [
    "POETRY_VIRTUALENVS_IN_PROJECT=True"
]
testpaths = ["tests"]

[tool.poetry.scripts]
css4442_testing = "css4442_testing.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
